--- a/backend/package.json
+++ b/backend/package.json
@@ -7,29 +7,30 @@
     "start": "nodemon src/server.js"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.1",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
-    "util": "^0.12.1",
-    "winston": "^3.2.1",
-    "bcryptjs": "^2.4.3",
-    "global": "^4.4.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "yup": "^0.27.0",
-    "mongoose": "^5.9.1"
+    "util": "^0.12.1",
+    "winston": "^3.2.1",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2",
     "eslint": "^6.3.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
+    "nodemon": "^2.0.2",
     "prettier": "^1.18.2",
     "sucrase": "^3.10.1"
   }
