--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
     "start": "nodemon src/server.js"
   },
   "dependencies": {
-    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
+    "cep-promise": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
