--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "path": "^0.12.7",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
     "util": "^0.12.1",
     "winston": "^3.2.1",
     "yup": "^0.27.0"
