--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.3",
+    "react-text-mask": "^5.4.3",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5"
   },
