--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "cep-promise": "^4.0.0",
     "cors": "^2.8.5",
+    "cypress": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
